// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CurrentPlaylists > matches the snapshot 1`] = `"<!--v-if-->"`;

exports[`CurrentPlaylists > when playlist value returns playlists > matches the snapshot 1`] = `
"<ul>
  <li><a exactactiveclass="current" class="iconButton link link" title="playlist-0 Playlist">
      <phqueue class="icon" aria-hidden="true" size="20" weight="duotone"></phqueue><span class="text">playlist-0</span>
    </a></li>
  <li><a exactactiveclass="current" class="iconButton link link" title="playlist-1 Playlist">
      <phqueue class="icon" aria-hidden="true" size="20" weight="duotone"></phqueue><span class="text">playlist-1</span>
    </a></li>
</ul>"
`;

exports[`CurrentPlaylists > when playlist value returns playlists > when collapsed value is true > matches the snapshot 1`] = `
"<ul>
  <li><a exactactiveclass="current" class="iconButton link link" title="playlist-0 Playlist">
      <phqueue class="icon" aria-hidden="true" size="20" weight="duotone"></phqueue><span class="text visually-hidden">playlist-0</span>
    </a></li>
  <li><a exactactiveclass="current" class="iconButton link link" title="playlist-1 Playlist">
      <phqueue class="icon" aria-hidden="true" size="20" weight="duotone"></phqueue><span class="text visually-hidden">playlist-1</span>
    </a></li>
</ul>"
`;

exports[`CurrentPlaylists > when playlist value returns playlists > when playlist value returned is more than 5 > matches the snapshot 1`] = `
"<ul>
  <li><a exactactiveclass="current" class="iconButton link link" title="playlist-0 Playlist">
      <phqueue class="icon" aria-hidden="true" size="20" weight="duotone"></phqueue><span class="text">playlist-0</span>
    </a></li>
  <li><a exactactiveclass="current" class="iconButton link link" title="playlist-1 Playlist">
      <phqueue class="icon" aria-hidden="true" size="20" weight="duotone"></phqueue><span class="text">playlist-1</span>
    </a></li>
  <li><a exactactiveclass="current" class="iconButton link link" title="playlist-2 Playlist">
      <phqueue class="icon" aria-hidden="true" size="20" weight="duotone"></phqueue><span class="text">playlist-2</span>
    </a></li>
  <li><a exactactiveclass="current" class="iconButton link link" title="playlist-3 Playlist">
      <phqueue class="icon" aria-hidden="true" size="20" weight="duotone"></phqueue><span class="text">playlist-3</span>
    </a></li>
  <li><a exactactiveclass="current" class="iconButton link link" title="playlist-4 Playlist">
      <phqueue class="icon" aria-hidden="true" size="20" weight="duotone"></phqueue><span class="text">playlist-4</span>
    </a></li>
</ul>"
`;
